Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-4813

backfill remaining stat is wrong

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • 1.8.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • centos 5.5, ec2 with EBS, 1.8.0

    Description

      During some testing with the Hadoop connector, we found that the TAP backfill remaining stat would show, correctly, the number of items during the memory portion of the backfill and then would start to vary between 0 and 1 per node. The theory is that it's showing backfill per vbucket (the disk backfill) as number of backfills running after the memory backfill completes.

      The full name of the stat is ep_tap_user_queue_backfillremaining.

      This can be rather confusing, as users will see a huge spike in items being backfilled followed by, what appears to be, not much of anything.

      The backfill runs correctly.

      Recommended solution is to convert the backfill remaining stat to either exact or approximate number of items remaining and make it work correctly for both memory and vbucket stats.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            ingenthr Matt Ingenthron
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty